// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/System/PushNotification/Wechat/ConfigExtraButtons render snap when hidden val is true render extraButtonsVisible is false 1`] = `
<body>
  <div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
      hidden=""
    >
      <div
        class="ant-space-item"
        style="margin-right: 12px;"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  height="16"
                  viewBox="0 0 17 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.334 6.667H14l-6 8.666v-6H3.334l6-8.666z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-11ugcfo"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  color="#292c33"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/System/PushNotification/Wechat/ConfigExtraButtons render snap when hidden val is true render isConfigClosed is true 1`] = `
<body>
  <div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
      hidden=""
    >
      <div
        class="ant-space-item"
        style="margin-right: 12px;"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  height="16"
                  viewBox="0 0 17 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.334 6.667H14l-6 8.666v-6H3.334l6-8.666z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-11ugcfo"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  color="#292c33"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/System/PushNotification/Wechat/ConfigExtraButtons render snap when send api render snap when send api error 1`] = `
<body>
  <div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-right: 12px;"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-icon-only ant-btn-loading system-config-button basic-button-wrapper css-geipcv"
              disabled=""
              type="button"
            >
              <span
                class="ant-btn-icon ant-btn-loading-icon"
              >
                <span
                  aria-label="loading"
                  class="anticon anticon-loading anticon-spin"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="loading"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-11ugcfo"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  color="#292c33"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-popover ant-popover-hidden ant-popover-placement-bottomRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: 0px; top: 0px; box-sizing: border-box; pointer-events: none;"
    >
      <div
        class="ant-popover-arrow"
        style="position: absolute;"
      />
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="ant-space ant-space-vertical full-width-element"
            >
              <div
                class="ant-space-item"
                style="margin-bottom: 16px;"
              >
                <form
                  class="ant-form ant-form-horizontal"
                >
                  <div
                    class="ant-form-item has-required-style has-label-tip css-1jlm9cy"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      class="ant-row ant-form-item-row"
                    >
                      <div
                        class="ant-col ant-col-24 ant-form-item-label"
                      >
                        <label
                          class="ant-form-item-required ant-form-item-no-colon"
                          for="receiveId"
                          title=""
                        >
                          <div
                            class="label-cont-custom"
                          >
                            <div>
                              接收者UserID
                            </div>
                            <div
                              class="tip-content-box"
                            >
                              企业微信成员账号
                            </div>
                          </div>
                        </label>
                      </div>
                      <div
                        class="ant-col ant-col-24 ant-form-item-control"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <input
                              aria-required="true"
                              class="ant-input basic-input-wrapper css-1pd1cd5"
                              id="receiveId"
                              placeholder="请输入接收者UserID"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="ant-space-item"
              >
                <div
                  class="ant-row"
                >
                  <div
                    class="ant-col ant-col-24"
                    style="text-align: right;"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 12px;"
                      >
                        <button
                          class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            取 消
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn ant-btn-primary ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            确 认
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-message ant-message-top"
    style="left: 50%; transform: translateX(-50%); top: 8px;"
  >
    <div
      class="ant-message-notice ant-message-notice-error"
    >
      <div
        class="ant-message-notice-content"
      >
        <div
          class="ant-message-custom-content ant-message-error"
        >
          <span
            aria-label="close-circle"
            class="anticon anticon-close-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close-circle"
              fill="currentColor"
              fill-rule="evenodd"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
              />
            </svg>
          </span>
          <span>
            未知错误...
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/System/PushNotification/Wechat/ConfigExtraButtons render snap when send api render snap when send api success 1`] = `
<body>
  <div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-right: 12px;"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-icon-only ant-btn-loading system-config-button basic-button-wrapper css-geipcv"
              disabled=""
              type="button"
            >
              <span
                class="ant-btn-icon ant-btn-loading-icon"
              >
                <span
                  aria-label="loading"
                  class="anticon anticon-loading anticon-spin"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="loading"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-11ugcfo"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  color="#292c33"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-popover ant-popover-hidden ant-popover-placement-bottomRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: 0px; top: 0px; box-sizing: border-box; pointer-events: none;"
    >
      <div
        class="ant-popover-arrow"
        style="position: absolute;"
      />
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="ant-space ant-space-vertical full-width-element"
            >
              <div
                class="ant-space-item"
                style="margin-bottom: 16px;"
              >
                <form
                  class="ant-form ant-form-horizontal"
                >
                  <div
                    class="ant-form-item has-required-style has-label-tip css-1jlm9cy"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      class="ant-row ant-form-item-row"
                    >
                      <div
                        class="ant-col ant-col-24 ant-form-item-label"
                      >
                        <label
                          class="ant-form-item-required ant-form-item-no-colon"
                          for="receiveId"
                          title=""
                        >
                          <div
                            class="label-cont-custom"
                          >
                            <div>
                              接收者UserID
                            </div>
                            <div
                              class="tip-content-box"
                            >
                              企业微信成员账号
                            </div>
                          </div>
                        </label>
                      </div>
                      <div
                        class="ant-col ant-col-24 ant-form-item-control"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <input
                              aria-required="true"
                              class="ant-input basic-input-wrapper css-1pd1cd5"
                              id="receiveId"
                              placeholder="请输入接收者UserID"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="ant-space-item"
              >
                <div
                  class="ant-row"
                >
                  <div
                    class="ant-col ant-col-24"
                    style="text-align: right;"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 12px;"
                      >
                        <button
                          class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            取 消
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn ant-btn-primary ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            确 认
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-message ant-message-top"
    style="left: 50%; transform: translateX(-50%); top: 8px;"
  >
    <div
      class="ant-message-notice ant-message-notice-success"
    >
      <div
        class="ant-message-notice-content"
      >
        <div
          class="ant-message-custom-content ant-message-success"
        >
          <span
            aria-label="check-circle"
            class="anticon anticon-check-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="check-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
              />
            </svg>
          </span>
          <span>
            测试消息发送成功
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/System/PushNotification/Wechat/ConfigExtraButtons render snap when ui interaction render click edit btn 1`] = `
<body>
  <div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-right: 12px;"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  height="16"
                  viewBox="0 0 17 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.334 6.667H14l-6 8.666v-6H3.334l6-8.666z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-11ugcfo"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  color="#292c33"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/System/PushNotification/Wechat/ConfigExtraButtons render snap when ui interaction render test btn snap when click cancel btn 1`] = `
<body>
  <div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-right: 12px;"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center ant-popover-open basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  height="16"
                  viewBox="0 0 17 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.334 6.667H14l-6 8.666v-6H3.334l6-8.666z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-11ugcfo"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  color="#292c33"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-popover ant-popover-placement-bottomRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-popover-arrow"
        style="position: absolute;"
      />
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="ant-space ant-space-vertical full-width-element"
            >
              <div
                class="ant-space-item"
                style="margin-bottom: 16px;"
              >
                <form
                  class="ant-form ant-form-horizontal"
                >
                  <div
                    class="ant-form-item has-required-style has-label-tip css-1jlm9cy"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      class="ant-row ant-form-item-row"
                    >
                      <div
                        class="ant-col ant-col-24 ant-form-item-label"
                      >
                        <label
                          class="ant-form-item-required ant-form-item-no-colon"
                          for="receiveId"
                          title=""
                        >
                          <div
                            class="label-cont-custom"
                          >
                            <div>
                              接收者UserID
                            </div>
                            <div
                              class="tip-content-box"
                            >
                              企业微信成员账号
                            </div>
                          </div>
                        </label>
                      </div>
                      <div
                        class="ant-col ant-col-24 ant-form-item-control"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <input
                              aria-required="true"
                              class="ant-input basic-input-wrapper css-1pd1cd5"
                              id="receiveId"
                              placeholder="请输入接收者UserID"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="ant-space-item"
              >
                <div
                  class="ant-row"
                >
                  <div
                    class="ant-col ant-col-24"
                    style="text-align: right;"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 12px;"
                      >
                        <button
                          class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            取 消
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn ant-btn-primary ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            确 认
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/System/PushNotification/Wechat/ConfigExtraButtons render snap when ui interaction render test btn snap when click cancel btn 2`] = `
<body>
  <div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-right: 12px;"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  height="16"
                  viewBox="0 0 17 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.334 6.667H14l-6 8.666v-6H3.334l6-8.666z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-11ugcfo"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  color="#292c33"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-popover ant-popover-hidden ant-popover-placement-bottomRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: 0px; top: 0px; box-sizing: border-box; pointer-events: none;"
    >
      <div
        class="ant-popover-arrow"
        style="position: absolute;"
      />
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="ant-space ant-space-vertical full-width-element"
            >
              <div
                class="ant-space-item"
                style="margin-bottom: 16px;"
              >
                <form
                  class="ant-form ant-form-horizontal"
                >
                  <div
                    class="ant-form-item has-required-style has-label-tip css-1jlm9cy"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      class="ant-row ant-form-item-row"
                    >
                      <div
                        class="ant-col ant-col-24 ant-form-item-label"
                      >
                        <label
                          class="ant-form-item-required ant-form-item-no-colon"
                          for="receiveId"
                          title=""
                        >
                          <div
                            class="label-cont-custom"
                          >
                            <div>
                              接收者UserID
                            </div>
                            <div
                              class="tip-content-box"
                            >
                              企业微信成员账号
                            </div>
                          </div>
                        </label>
                      </div>
                      <div
                        class="ant-col ant-col-24 ant-form-item-control"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <input
                              aria-required="true"
                              class="ant-input basic-input-wrapper css-1pd1cd5"
                              id="receiveId"
                              placeholder="请输入接收者UserID"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="ant-space-item"
              >
                <div
                  class="ant-row"
                >
                  <div
                    class="ant-col ant-col-24"
                    style="text-align: right;"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 12px;"
                      >
                        <button
                          class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            取 消
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn ant-btn-primary ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            确 认
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/System/PushNotification/Wechat/ConfigExtraButtons render snap when ui interaction render test btn snap when click test btn no show 1`] = `
<body>
  <div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-right: 12px;"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center ant-tooltip-open basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  height="16"
                  viewBox="0 0 17 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.334 6.667H14l-6 8.666v-6H3.334l6-8.666z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-11ugcfo"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  color="#292c33"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-tooltip ant-tooltip-placement-top"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-tooltip-content"
      >
        <div
          class="ant-tooltip-inner"
          role="tooltip"
          style="padding: 0px; border-radius: 10px;"
        >
          <div
            class="css-1lkd6d8"
            width="54"
          >
            测试
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/System/PushNotification/Wechat/ConfigExtraButtons render snap when ui interaction render test btn snap when validate item 1`] = `
<body>
  <div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-right: 12px;"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center ant-popover-open basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  height="16"
                  viewBox="0 0 17 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.334 6.667H14l-6 8.666v-6H3.334l6-8.666z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-icon-only system-config-button basic-button-wrapper css-11ugcfo"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  color="#292c33"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-popover ant-popover-placement-bottomRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-popover-arrow"
        style="position: absolute;"
      />
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="ant-space ant-space-vertical full-width-element"
            >
              <div
                class="ant-space-item"
                style="margin-bottom: 16px;"
              >
                <form
                  class="ant-form ant-form-horizontal"
                >
                  <div
                    class="ant-form-item has-required-style has-label-tip css-1jlm9cy"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      class="ant-row ant-form-item-row"
                    >
                      <div
                        class="ant-col ant-col-24 ant-form-item-label"
                      >
                        <label
                          class="ant-form-item-required ant-form-item-no-colon"
                          for="receiveId"
                          title=""
                        >
                          <div
                            class="label-cont-custom"
                          >
                            <div>
                              接收者UserID
                            </div>
                            <div
                              class="tip-content-box"
                            >
                              企业微信成员账号
                            </div>
                          </div>
                        </label>
                      </div>
                      <div
                        class="ant-col ant-col-24 ant-form-item-control"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <input
                              aria-required="true"
                              class="ant-input basic-input-wrapper css-1pd1cd5"
                              id="receiveId"
                              placeholder="请输入接收者UserID"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="ant-space-item"
              >
                <div
                  class="ant-row"
                >
                  <div
                    class="ant-col ant-col-24"
                    style="text-align: right;"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 12px;"
                      >
                        <button
                          class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            取 消
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn ant-btn-primary ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            确 认
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
